@@ -14,16 +14,17 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
+ o CURLOPT_FILETIME when downloading FTP corrupted data
  o FTP upload resume now works even if no file is present on the site
  o SSL seeding no longer attempts to read the whole random file
 
 Other curl-related news since the previous public release:
 
- o 
+ o pycurl 7.13.1 http://pycurl.sf.net
 
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Dan Fandrich, Ignacio Vazquez-Abrams
+ Dan Fandrich, Ignacio Vazquez-Abrams, Randy McMurchy, Dominick Meglio
 
         Thanks! (and sorry if I forgot to mention someone)
